2011-02-07  Xiyuan Xia  <xiyuan@chromium.org>

Reviewed by Tony Chang.

        [Chromium] Select popup box does not align with select button when appearance is not "menulist".
        https://bugs.webkit.org/show_bug.cgi?id=53942

        Added manual test select_webkit_appearance_off_popup_alignment.html.

        * manual-tests/select_webkit_appearance_off_popup_alignment.html: Added.
        * platform/chromium/PopupMenuChromium.cpp:
        (WebCore::PopupListBox::layout):

Canonical link: https://commits.webkit.org/67966@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77907 268f45cc-cd09-0410-ab3c-d52691b4dbfc